Updating styles to correct header logo positioning on smaller displays. Corrected bottom padding on people listing.

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -8,7 +8,7 @@ header {
   }
   #topLogo{
   	position: relative;
-  	left: 500px;
+  	left: 50%;
   }
   #votesLeft{
   	font-style: italic;
@@ -83,7 +83,7 @@ nav a {
 }
 
 .project-item {
-	padding: 10px;
+	padding: 5px 10px;
 	border: 1px solid #ebebeb;
 	border-radius: 4px;
 	margin-bottom: 5px;
@@ -94,7 +94,13 @@ nav a {
   text-indent:none;padding:0;margin:0;
 
   li {
-    float:left;margin-right:10px;marbin-bottom:10px !important;border:1px solid #ccc;background:#efefef;padding:2px 5px;list-style:none;font-size:11px;
-
+    float:left;
+    margin-right:10px;
+    margin-bottom:5px !important;
+    border:1px solid #ccc;
+    background:#efefef;
+    padding:2px 5px;
+    list-style:none;
+    font-size:11px;
   }
 }
